--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,16 +1,22 @@
 {% extends "base.html" %} 
 {% block title %}Home{% endblock %} 
-{% block content%}
+{% block content %}
     <h1 align=center>Notes</h1>
-    <ul class="list-group list-group-flush" id="notes">
+      <ul class="list-group list-group-flush" id="notes">
 
-      <li class="list-group-item">
-      
-        <button type="button" class="close" onClick="deleteNote(note.id)">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </li>
-    
+      {% for note in user.notes %}
+
+        <li class="list-group-item">
+          
+          {{ note.data }}
+
+          <button type="button" class="close" onClick="deleteNote({{note.id}})">
+            <span aria-hidden="true">&times;</span>
+          </button>
+
+        </li>
+
+      {% endfor %}
     </ul>
     <form method="POST">
       <textarea name="note" id="note" class="form-control"></textarea>
