--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -29,13 +29,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
-          
+          {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="{{url_for('views.home')}}">Home</a>
           <a class="nav-item nav-link" id="logout" href="{{url_for('auth.logout')}}">Logout</a>
-    
+          {% else %}
           <a class="nav-item nav-link" id="login" href="{{url_for('auth.login')}}">Login</a>
           <a class="nav-item nav-link" id="signUp" href="{{url_for('auth.sign_up')}}">Sign Up</a>
-          
+          {% endif %}
         </div>
       </div>
     </nav>
